--- a/app/index.html
+++ b/app/index.html
@@ -48,11 +48,11 @@
 
 			<!--nav start-->
 
-			<nav class="navbar navbar-custom navbar-expand-md fixed-top " role="navigation">
+			<nav class="navbar navbar-custom navbar-expand-md fixed-top" role="navigation">
 
 				<div class="container">
 
-					<div class="navbar-brand" href="#">Site Logo</div>
+					<div class="navbar-brand" href="#">Start template fo landing</div>
 
 
 					<!--hamburger start-->
@@ -108,7 +108,9 @@
 
 				<div class="container">
 
-					<h1 class="h1">Hero section</h1>
+					<h1 class="h1">&lth1&gt Hero section &lt/h1&gt</h1>
+
+					<img class="preview img-responsive" src="img/preview.jpg" alt="preview">
 
 				</div>
 
@@ -123,7 +125,7 @@
 
 				<div class="container">
 
-					<h2 class="h2">Section-1</h2>
+					<h2 class="h2">&lth2&gtSection&lt/h2&gt</h2>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur enim et quibusdam. Adipisci architecto debitis libero numquam ratione. Debitis nostrum pariatur, sequi ullam velit voluptatibus. Aut distinctio enim explicabo illo laborum provident quia recusandae repellendus sequi vero? Ab assumenda corporis, deleniti distinctio dolorem doloremque, eligendi esse eum eveniet ex hic impedit ipsum itaque labore laboriosam nam nesciunt omnis optio perferendis possimus ratione reiciendis vitae voluptatem. Cupiditate dolorem eius expedita facere nulla numquam possimus recusandae, suscipit totam velit! Architecto atque blanditiis consequatur cum cumque, doloribus ducimus eaque excepturi magni maxime modi obcaecati perferendis placeat ratione rem, sequi sit soluta voluptatibus!</p>
 
@@ -140,7 +142,7 @@
 
 				<div class="container">
 
-					<h2 class="h2">Section-2</h2>
+					<h2 class="h2">&lth2&gtSection&lt/h2&gt</h2>
 
 				</div>
 
@@ -206,11 +208,6 @@
 
 
 
-
-				
-
-
-	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 
