--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Start template for landing</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -163,27 +163,27 @@
 
 				<ul class="social-links">
 					<li>
-						<a href="index.html#" target="_blank" rel="noopener" title="Наш Вконтакте">
+						<a href="index.html#" target="_blank" rel="noopener" title="Facebook">
 							<i class="fa fa-facebook"></i>
 						</a>
 					</li>
 					<li>
-						<a href="index.html#" target="_blank" rel="noopener" title="Наш Вконтакте">
+						<a href="index.html#" target="_blank" rel="noopener" title="Twitter">
 							<i class="fa fa-twitter"></i>
 						</a>
 					</li>
 					<li>
-						<a href="index.html#" target="_blank" rel="noopener" title="Наш Вконтакте">
+						<a href="index.html#" target="_blank" rel="noopener" title="Google +">
 							<i class="fa fa-google-plus"></i>
 						</a>
 					</li>
 					<li>
-						<a href="index.html#" target="_blank" rel="noopener" title="Наш Вконтакте">
+						<a href="index.html#" target="_blank" rel="noopener" title="Pinterest">
 							<i class="fa fa-pinterest"></i>
 						</a>
 					</li>
 					<li>
-						<a href="index.html#" target="_blank" rel="noopener" title="Наш Вконтакте">
+						<a href="index.html#" target="_blank" rel="noopener" title="Mail">
 							<i class="fa fa-envelope"></i>
 						</a>
 					</li>
